--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "fernandamayela/fernandamayela.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Fernanda Gonzalez"
   pronouns         : "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Austin, TX"
