--- a/_config.yml
+++ b/_config.yml
@@ -234,28 +234,28 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # # _teaching
-  # - scope:
-  #     path: ""
-  #     type: teaching
-  #   values:
-  #     layout: single
-  #     author_profile: true
-  #     share: true
-  #     comments: true
-  # _publications
+  # _teaching
   - scope:
       path: ""
-      type: research
+      type: teaching
     values:
       layout: single
       author_profile: true
       share: true
       comments: true
-  # _experience
+  # _publications
   - scope:
       path: ""
-      type: experience
+      type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
     values:
       layout: single
       author_profile: true
@@ -264,7 +264,7 @@ defaults:
   # _talks
   - scope:
       path: ""
-      type: conferences
+      type: talks
     values:
       layout: talk
       author_profile: true
