--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Fernanda Gonzalez"
   pronouns         : "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Political Science & Computer Science at Wellesley College"
   location         : "Austin, TX"
   employer         : "Wellesley College"
   uri              : # URL
