--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /experience/    
     
   - title: "CV"
-    url: /files/FG_Resume.pdf/
+    url: /files/FG_Resume.pdf
 
   - title: "Contact"
     url: /contact/
