--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links links
 main:
   - title: "Research"
-    url: /research/
+    url: /publications/
 
   - title: "Conferences"
-    url: /conferences/    
+    url: /talks/    
 
   - title: "Experience"
     url: /experience/    
