--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
   - title: "About"
-    url: /about_me/
+    url: /about-me/
     
   - title: "Research"
     url: /publications/
