--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # URL "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=LAlx_QIAAAAJ&hl=en&oi=sra"
   impactstory      : # URL
   orcid            : # URL "http://orcid.org/yourorcidurl"
   semantic         : # URL
