--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /experience/    
     
   - title: "CV"
-    url: /files/FG_Resume.pdf
+    url: /files/Gonzalez_CV.pdf
 
   - title: "Contact"
     url: /contact/
