--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: "About"
+  - title: "👩🏻‍💻 About"
     url: /about-me/
     
-  - title: "Research"
+  - title: "📚 Research"
     url: /publications/
 
-  - title: "Conferences"
+  - title: "👩🏻‍🏫 Conferences"
     url: /talks/    
 
-  - title: "Experience"
+  - title: "💻 Experience"
     url: /experience/    
     
-  - title: "CV"
+  - title: "📇 CV"
     url: /files/Gonzalez_CV.pdf
 
-  - title: "Contact"
+  - title: "📧 Contact"
     url: /contact/
