--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "👩🏻‍💻 About"
     url: /about-me/
     
-  - title: "📚 Research"
+  - title: "📖 Research"
     url: /publications/
 
   - title: "👩🏻‍🏫 Conferences"
