--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /about-me/
     
   - title: "📖 Research"
-    url: /publications/
+    url: /research/
 
   - title: "👩🏻‍🏫 Conferences"
     url: /talks/    
